# dagron

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
crates/dagron-core/: Cargo.toml
crates/dagron-core/benches/: graph_bench.rs
crates/dagron-core/src/: errors.rs  lib.rs  node.rs  types.rs
crates/dagron-core/src/algorithms/: cycle.rs  diff.rs  dominators.rs  incremental.rs  mod.rs  partition.rs  paths.rs  priority_toposort.rs  reachability.rs  scheduling.rs  subgraph.rs  toposort.rs  transforms.rs  traversal.rs
crates/dagron-core/src/graph/: cache.rs  concurrent.rs  construction.rs  diff.rs  incremental.rs  introspection.rs  matching.rs  mod.rs  partition.rs  paths.rs  reachability.rs  scheduling.rs  serialization.rs  stats.rs  subgraph.rs  toposort.rs  transforms.rs  validation.rs
crates/dagron-core/tests/: cache.rs  concurrent.rs  construction.rs  incremental.rs  introspection.rs  matching.rs  paths.rs  priority_toposort.rs  reachability.rs  scheduling.rs  serialization.rs  stats.rs  subgraph.rs  toposort.rs  transforms.rs  validation.rs
crates/dagron-py/: Cargo.toml
crates/dagron-py/src/: construction.rs  dag.rs  dashboard.rs  diff.rs  errors.rs  incremental.rs  introspection.rs  iterators.rs  lib.rs  matching.rs  node.rs  noderef.rs  partition.rs  paths.rs  payload.rs  protocols.rs  reachability.rs  scheduling.rs  serialization.rs  stats.rs  subgraph.rs  toposort.rs  transforms.rs  validation.rs
crates/dagron-ui/: Cargo.toml
crates/dagron-ui/assets/: dashboard.html
crates/dagron-ui/src/: html.rs  lib.rs  server.rs  state.rs
crates/dagron-ui/tests/: integration.rs
docs/: biome.json  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
docs-next/: README.md
docs-next/content/docs/: index.mdx  meta.json
docs-next/content/docs/api/: meta.json
docs-next/content/docs/guide/: architecture.mdx  benchmarks.mdx  cookbook.mdx  getting-started.mdx  meta.json  typed-and-reactive.mdx  why-dagron.mdx
docs-next/scripts/: migrate.mjs
docs-next/src/app/: layout.tsx
docs-next/src/components/: dag-diagram.tsx  feature-card.tsx
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api/: index.mdx  meta.json
docs/content/docs/guide/: architecture.mdx  benchmarks.mdx  cookbook.mdx  meta.json
docs/content/docs/typed-and-reactive/: index.mdx  meta.json
docs/pages/: intro.mdx
docs/pages/api/analysis/: analysis.mdx  contracts.mdx  dataframe.mdx
docs/pages/api/core/: builder.mdx  core.mdx  errors.mdx
docs/pages/api/execution/: caching.mdx  checkpoint.mdx  conditions.mdx  distributed.mdx  dynamic.mdx  execution.mdx  gates.mdx  incremental.mdx  pipeline.mdx  reactive.mdx  resources.mdx
docs/pages/api/observability/: profiling.mdx  tracing.mdx
docs/pages/api/utilities/: compose.mdx  display.mdx  integration.mdx  modern-api.mdx  plugins.mdx  template.mdx  versioning.mdx
docs/pages/guide/: architecture.mdx  benchmarks.mdx  cookbook.mdx  getting-started.mdx  typed-and-reactive.mdx  why-dagron.mdx
docs/pages/guide/advanced/: contracts.mdx  dataframes.mdx  plugins-hooks.mdx  templates.mdx  versioning.mdx
docs/pages/guide/core-concepts/: building-dags.mdx  executing-tasks.mdx  inspecting-graphs.mdx  serialization.mdx  transforms.mdx
docs/pages/guide/execution-strategies/: approval-gates.mdx  (+7 more)
docs/src/app/: global.css
docs/src/components/: ApiSignature.tsx  DagDiagram.tsx  FeatureCard.tsx  ParamTable.tsx  StatusBadge.tsx  api-signature.tsx  dag-diagram.tsx  effect-badge.tsx  mdx.tsx  param-table.tsx  status-badge.tsx
docs/src/css/: custom.css
docs/src/lib/: layout.shared.tsx  shared.ts
py_src/dagron/: __init__.py  __init__.pyi  _internal.pyi  _patches.py  builder.py  builder.pyi  checkpoint.py  compose.py  conditions.py  contentcache.py  contracts.py  dataframe.py  display.py  effects.py  executor.py  explain.py  flow.py  integration.py  linting.py  pipeline.py  profiling.py  reactive.py  stubgen.py  template.py  trace.py  tracing.py  versioning.py
py_src/dagron/analysis/: __init__.py  explain.py  lineage.py  linting.py  query.py
py_src/dagron/dashboard/: __init__.py
py_src/dagron/execution/: __init__.py  _helpers.py  _types.py  cached_executor.py  checkpoint.py  conditions.py  content_cache.py  distributed.py  distributed_executor.py  dynamic.py  executor.py  gates.py  incremental.py  pipeline.py  profiling.py  reactive.py  resources.py  tracing.py
py_src/dagron/plugins/: __init__.py  base.py  hooks.py  manager.py  registry.py
tests/python/: conftest.py  test_benchmarks.py  test_builder.py  test_checkpoint.py  test_compose.py  test_concurrent.py  test_conditions.py  test_construction.py  test_contentcache.py  test_contracts.py  test_cycle_detection.py  test_dataframe.py  test_display.py  test_effects.py  test_executor.py  test_explain.py  test_flow.py  test_incremental.py  test_integration.py  test_introspection.py  test_linting.py  test_node_ref.py  test_paths.py  test_pipeline.py  test_plugins.py  test_priority_toposort.py  test_profiling.py  test_protocols.py  test_query.py  test_reachability.py  test_reactive.py  test_reactive_bench.py  test_reactive_engine.py  test_replay.py  test_scheduling.py  test_serialization.py  test_stats.py  test_subgraph.py  test_template.py  test_toposort.py  (+4 more)
tests/python/analysis/: test_explain.py  test_lineage.py  test_linting.py  test_query.py
tests/python/core/: test_cache.py  test_construction.py  test_diff.py  test_graph_algorithms.py  test_iterators.py  test_matching.py  test_partition.py  test_priority_toposort.py  test_reachability.py  test_serialization.py  test_toposort.py  test_transforms.py
tests/python/dashboard/: test_app.py  test_plugin.py
tests/python/execution/: test_checkpoint.py  test_conditions.py  test_content_cache.py  test_distributed_executor.py  test_dynamic.py  test_executor.py  test_gates.py  test_incremental.py  test_pipeline.py  test_profiling.py  test_reactive.py  test_resources.py  test_scheduling.py  test_tracing.py
(+94 files in other folders)
