[workspace]
members = ["crates/dagron-core", "crates/dagron-py"]
resolver = "2"

[workspace.dependencies]
petgraph = "0.7"
ahash = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
regex = "1"
pyo3 = { version = "0.24", features = ["abi3-py312", "multiple-pymethods"] }
