[workspace]
members = ["crates/dagron-core", "crates/dagron-py", "crates/dagron-ui"]
resolver = "2"

[workspace.dependencies]
petgraph = "0.7"
ahash = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
memmap2 = "0.9"
regex = "1"
pyo3 = { version = "0.24", features = ["abi3-py312", "multiple-pymethods"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"
