[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dagron"
version = "0.1.0"
description = "A fast Rust-backed DAG engine for Python"
requires-python = ">=3.12"

[tool.maturin]
manifest-path = "crates/dagron-py/Cargo.toml"
python-source = "py_src"
module-name = "dagron._internal"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.8.0",
]
bench = [
    "pytest-benchmark>=5.1.0",
    "networkx>=3.0",
]
