[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dagron"
version = "0.1.0"
description = "A fast Rust-backed DAG engine for Python"
requires-python = ">=3.12"

[tool.maturin]
manifest-path = "crates/dagron-py/Cargo.toml"
python-source = "py_src"
module-name = "dagron._internal"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.8.0",
    "mypy>=1.10",
]
bench = [
    "pytest-benchmark>=5.1.0",
    "networkx>=3.0",
]

[tool.ruff]
target-version = "py312"
src = ["py_src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "C4", "PIE", "PT", "TCH", "PGH"]
ignore = ["E501", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "B011", "PT011", "SIM300"]
"py_src/dagron/__init__.py" = ["E731"]
"py_src/dagron/_patches.py" = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["dagron"]

[tool.mypy]
python_version = "3.12"
mypy_path = "py_src"
packages = ["dagron"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphviz.*"
ignore_missing_imports = true
