[package]
name = "dagron-core"
version = "0.1.1"
edition = "2021"
rust-version = "1.83"
description = "Fast DAG construction, analysis, and scheduling engine"
license = "MIT"
repository = "https://github.com/ByteVeda/dagron"
keywords = ["dag", "graph", "scheduling", "workflow", "petgraph"]
categories = ["algorithms", "data-structures"]

[lib]
name = "dagron_core"

[dependencies]
petgraph = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
memmap2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "graph_bench"
harness = false
