[package]
name = "dagron-ui"
version = "0.1.1"
edition = "2021"
rust-version = "1.83"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
indexmap = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
